Fix reference web overflowing and simplify component

--- a/client/app/card/card.component.scss
+++ b/client/app/card/card.component.scss
@@ -282,3 +282,11 @@ app-related-cards {
         border-top: 1px solid var(--mat-sys-outline-variant);
     }
 }
+
+.reference-title {
+    margin: 0 !important;
+}
+
+.url-description {
+    word-wrap: break-word;
+}
